# Sensor-Control-Data-Gathering

./: README.md
Camera Usage/: usage_monitor.py
LiDARS/LeddarTech/: README.md
LiDARS/LeddarTech/leddar_ws/Leddar_ROS/: CMakeLists.txt  README.md  package.xml
LiDARS/LeddarTech/leddar_ws/Leddar_ROS/launch/: example.launch.py
LiDARS/LeddarTech/leddar_ws/Leddar_ROS/msg/: Specs.msg
LiDARS/LeddarTech/leddar_ws/Leddar_ROS/rviz/: example.rviz
LiDARS/LeddarTech/leddar_ws/Leddar_ROS/scripts/: device.py
LiDARS/Velodyne/: README.md
Oak_D_Pro_Config/: Object_Detection.py
